# zenchain-testnet-farmer

./: .envsample  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
core/: settings.py
core/alembic/: env.py
core/alembic/versions/: 69bc4e91f00a_initial.py
core/captcha/anycaptcha/: __init__.py
core/captcha/anycaptcha/service/: captcha_guru.py  sctg_captcha.py  twocaptcha.py
core/database/: connect.py  models.py
core/jobs/: __init__.py
core/services/: account_create.py  action_service.py  captcha.py  staking.py
core/services/handlers/: __init__.py  base.py  faucet.py  stake.py  waitlist.py
core/utils/: art.py  log.py
core/utils/w3/: address.py
